--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.11.6",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
@@ -25,10 +27,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.2.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "next-cloudinary": "^5.18.0",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
